# yadd

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
scripts/: build.bat  make_venv_dev.bat  pre-commit.bat  pypi.bat  test_cli.bat
test_yadd/: conftest.py  test_bad_input.py  test_bools.py  test_customization.py  test_pass_rate.py  test_yadd_simple.py
test_yadd/data/: uut_fail.json
yadd/: __init__.py  __main__.py  __version__.py  make_versions_file.py  yadd_cli.py  yadd_module.py
