[project]
name = "yadd"
version = "0.0.1"
description = "Yet Another dict Differ"
readme = "README.md"

# the 0th author is the "application author", i.e. the entity (possibly organization or business) publishing the package (as opposed to the individual authors, i.e. people)
authors = [
    { name = "jamesabel", email = "j@abel.co" },
    { name = "James Abel", email = "j@abel.co" }
]

license = { text = "MIT License" }
keywords = ["dict", "differ"]
dependencies = [
    "ismain",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yadd"]

[tool.black]
line-length = 192
